--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ h1,h2,h3,h4,h5{
 
 .section-about{
     padding: 4.8rem 0 9.6rem 0;
-    background-color: var(--primary-blue);
+    background-color: var(--white);
 }
 
 .about-us{
