--- a/css/styles.css
+++ b/css/styles.css
@@ -16,9 +16,6 @@
 }
 
 
-body{
-    overflow: hidden;
-}
 
 h1,h2,h3,h4,h5{
     font-family: var(--roboto-con);
@@ -31,7 +28,7 @@ h1,h2,h3,h4,h5{
 }
 
 .white{
-    color:var(--white)
+    color:var(--white);
 }
 
 .black{
@@ -140,9 +137,7 @@ h1,h2,h3,h4,h5{
 
 /*About Us*/
 
-.section-about{
-    height:1000px;
-}
+
 
 
 
