--- a/css/styles.css
+++ b/css/styles.css
@@ -15,9 +15,10 @@
     --roboto-con: "Roboto Condensed"
 }
 
-body{
-    overflow: "hidden";
+body {
+    overflow: hidden;
 }
+
 
 
 h1,h2,h3,h4,h5{
