--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
     --grey: #636369;
     --black: #1F1F23;
     --light-grey: #EEEEF8;
-    --roboto-con: "Roboto Condensed"
+    
 }
 
 
@@ -25,13 +25,14 @@ html{
 }
 
 h1,h2,h3,h4,h5{
-    font-family: var(--roboto-con);
+    font-family: "Roboto Condensed", sans-serif;
 }
 
 .heading-primary{
-    font-size: 80px;
+    font-size: 60px;
     line-height:0.9;
     margin-bottom: 2rem;
+    font-weight: 400;
 }
 
 .white{
@@ -63,7 +64,7 @@ h1,h2,h3,h4,h5{
 }
 .main-nav-link {
     color: var(--grey);
-    font-family: var(--roboto-con);
+    font-family: "Roboto Condensed", sans-serif;
     text-decoration: none;
 }
 
@@ -115,7 +116,7 @@ h1,h2,h3,h4,h5{
     padding: 1.2rem 2.4rem;
     background-color: var(--white);
     color: var(--primary-blue);
-    font-family: var(--roboto-con);
+    font-family: "Roboto Condensed", sans-serif;
     text-decoration: none;
 }
 
@@ -146,7 +147,6 @@ h1,h2,h3,h4,h5{
 
 .section-about{
     padding: 4.8rem 0 9.6rem 0;
-    background-color: var(--white);
 }
 
 .about-us{
@@ -195,20 +195,124 @@ h1,h2,h3,h4,h5{
 //Company Values Section
 
 .section-company-values{
-    padding: 4.8rem 0 9.6rem 0;
-    background-color: var(--primary-blue);
+   padding: 48rem 0 9.6rem 0;
+
 }
 
-.company-values{
+
+
+.values{
     max-width: 130rem;
     margin: 0 auto;
-    padding: 0 4rem;
+    padding: 6rem 4rem;
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 6rem;
+    grid-template-columns: 1fr 1fr;
+    gap: 8rem;
+    align-items: center;
+    background-color: var(--light-grey);
+}
+
+.values-text-box{
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.values-description{
+    color: var(--grey);
+    font-size:1.2rem;
+    font-family: "Karla",san-serif;
+}
+
+.values-list{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.values-list-item{
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
+.values-list-item img{
+    width:15%;
+}
+
+.values-list-content p{
+    color: var(--grey);
+    font-size:1.2rem;
+    font-family: "Karla",san-serif;
+}
+
+.our-services{
+    max-width: 120rem;
+    margin: 0 auto;
+    padding: 6rem 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8rem;
+}
+
+.our-services p{
+    text-align: center;
+}
+
+.services{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.service-boxes{
+    background-color: var(--light-grey);
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+
+
+}
+
+
+.service-boxes img{
+    width:75px;
+}
+
+.services-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 40px;
+    padding: 0 10rem;
+}
+
+.services-description{
+    color: var(--grey);
+    font-size:1.2rem;
+    font-family: "Karla",san-serif;
+    font-weight:200;
+}
+
+.services-btn{
+        padding: 1rem 2rem;
+        background-color: var(--primary-blue);
+        color: var(--white);
+        text-decoration: none;
+        font-family: "Roboto Condensed", sans-serif;
+        border-raduis: 5px;
+
+}
+
+.services-btn:hover{
+    background-color: blue;
+}
 
 
 
