--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,10 @@ h1,h2,h3,h4,h5{
     font-family: "Karla",san-serif;
 }
 
+.values-list-content h2{
+    font-weight: 400;
+}
+
 .our-services{
     max-width: 120rem;
     margin: 0 auto;
@@ -267,16 +271,16 @@ h1,h2,h3,h4,h5{
     flex-direction: column;
 }
 
-.service-boxes{
+.service-boxes {
     background-color: var(--light-grey);
     padding: 1rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     gap: 20px;
-
-
+    word-wrap: break-word;
+  
 }
 
 
@@ -284,14 +288,17 @@ h1,h2,h3,h4,h5{
     width:75px;
 }
 
-.services-container{
-    display: flex;
-    flex-direction: row;
+
+
+.services-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     justify-content: space-between;
     gap: 20px;
     margin-bottom: 40px;
     padding: 0 10rem;
 }
+
 
 .services-description{
     color: var(--grey);
