--- a/css/styles.css
+++ b/css/styles.css
@@ -198,9 +198,6 @@ h1,h2,h3,h4,h5{
    padding: 48rem 0 9.6rem 0;
 
 }
-
-
-
 .values{
     max-width: 130rem;
     margin: 0 auto;
@@ -249,6 +246,8 @@ h1,h2,h3,h4,h5{
 .values-list-content h2{
     font-weight: 400;
 }
+
+//Services Section
 
 .our-services{
     max-width: 120rem;
@@ -319,6 +318,12 @@ h1,h2,h3,h4,h5{
 
 .services-btn:hover{
     background-color: blue;
+}
+
+//Testimonial Section 
+
+.testimonials-section{
+    padding: 48rem 0 9.6rem 0;
 }
 
 
