--- a/css/styles.css
+++ b/css/styles.css
@@ -323,7 +323,8 @@ h1,h2,h3,h4,h5{
 //Testimonial Section 
 
 .testimonials-section{
-    padding: 48rem 0 9.6rem 0;
+    padding:100px;
+    background-color: black;
 }
 
 
