--- a/css/styles.css
+++ b/css/styles.css
@@ -247,12 +247,12 @@ h1,h2,h3,h4,h5{
     font-weight: 400;
 }
 
-//Services Section
+
 
 .our-services{
     max-width: 120rem;
     margin: 0 auto;
-    padding: 6rem 4rem;
+    padding: 20rem 4rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -275,10 +275,9 @@ h1,h2,h3,h4,h5{
     padding: 1rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     gap: 20px;
-    word-wrap: break-word;
   
 }
 
@@ -291,7 +290,7 @@ h1,h2,h3,h4,h5{
 
 .services-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: 1fr 1fr 1fr;
     justify-content: space-between;
     gap: 20px;
     margin-bottom: 40px;
@@ -323,8 +322,14 @@ h1,h2,h3,h4,h5{
 //Testimonial Section 
 
 .testimonials-section{
-    padding:100px;
-    background-color: black;
+   
+}
+
+.testimonials{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 
