--- a/css/styles.css
+++ b/css/styles.css
@@ -1,405 +1,573 @@
 /* Settings for the entire site*/
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-
-:root{
-    --primary-blue: #0A6CFF;
-    --white: #FFFFFF;
-    --grey: #636369;
-    --black: #1F1F23;
-    --light-grey: #EEEEF8;
-    --text-color: #67474E;
-    
+:root {
+	--primary-blue: #0a6cff;
+	--white: #ffffff;
+	--grey: #636369;
+	--black: #1f1f23;
+	--light-grey: #eeeef8;
+	--text-color: #67474e;
 }
 
-
-body{
-    overflow-x: hidden;
+body {
+	overflow-x: hidden;
 }
 
-html{
-    overflow-x: hidden;
+html {
+	overflow-x: hidden;
 }
 
-h1,h2,h3,h4,h5{
-    font-family: "Roboto Condensed", sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5 {
+	font-family: "Roboto Condensed", sans-serif;
 }
 
-.heading-primary{
-    font-size: 60px;
-    line-height:0.9;
-    margin-bottom: 2rem;
-    font-weight: 400;
+p{
+    font-family: "Karla",sans-serif;
 }
 
-.white{
-    color:var(--white);
+.heading-primary {
+	font-size: 60px;
+	line-height: 0.9;
+	margin-bottom: 2rem;
+	font-weight: 400;
 }
 
-.black{
-    color:var(--black);
+.white {
+	color: var(--white);
+}
+
+.black {
+	color: var(--black);
 }
 
 /*Navigation Bar*/
 
-
-.header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--white);
-    height: 8rem;
-    padding: 0 4.8rem;
-    position: relative;
+.header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: var(--white);
+	height: 8rem;
+	padding: 0 4.8rem;
+	position: relative;
 }
 
-.main-nav-list{
-    display: flex;
-    gap: 2rem;
-    align-items: center;
-    list-style-type: none;
+.main-nav-list {
+	display: flex;
+	gap: 2rem;
+	align-items: center;
+	list-style-type: none;
 }
 .main-nav-link {
-    color: var(--grey);
-    font-family: "Roboto Condensed", sans-serif;
-    text-decoration: none;
+	color: var(--grey);
+	font-family: "Roboto Condensed", sans-serif;
+	text-decoration: none;
 }
 
-.main-nav-link.nav-cta:link,.main-nav-link.nav-cta:visited{
-    padding: 1.2rem 2.4rem;
-    background-color: var(--primary-blue);
-    color: var(--white);
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+	padding: 1.2rem 2.4rem;
+	background-color: var(--primary-blue);
+	color: var(--white);
 }
 
-.main-nav-link.nav-cta:hover,.main-nav-link.nav-cta:active{
-    background-color: blue;
- }
-
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+	background-color: blue;
+}
 
 /* Hero Section */
 
-.section-hero{
-    background-color: var(--primary-blue);
+.section-hero {
+	background-color: var(--primary-blue);
 }
-.sub-title{
-    margin-bottom:10px;
+.sub-title {
+	margin-bottom: 10px;
 }
-.hero{
-    max-width: 130rem;
-    margin: 0 auto;
-    padding: 0 6rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 5rem;
-    align-items: center;
-}
-
-.hero-text-box{
-    flex: 1;
-}
-.hero-text-box h4{
-    color: var(--white);
-    font-weight: 300;
+.hero {
+	max-width: 130rem;
+	margin: 0 auto;
+	padding: 0 6rem;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 5rem;
+	align-items: center;
 }
 
-.hero-description{
-    color: var(--white);
-    font-size: 1.2rem;
-    line-height: 1.5;
-    margin-bottom: 2rem;
+.hero-text-box {
+	flex: 1;
+}
+.hero-text-box h4 {
+	color: var(--white);
+	font-weight: 300;
 }
 
-.cta-btn{
-    padding: 1.2rem 2.4rem;
-    background-color: var(--white);
-    color: var(--primary-blue);
-    font-family: "Roboto Condensed", sans-serif;
-    text-decoration: none;
+.hero-description {
+	color: var(--white);
+	font-size: 1.2rem;
+	line-height: 1.5;
+	margin-bottom: 2rem;
 }
 
-.cta-btn:hover{
-    background-color: blue;
-    color: var(--white);
+.cta-btn {
+	padding: 1.2rem 2.4rem;
+	background-color: var(--white);
+	color: var(--primary-blue);
+	font-family: "Roboto Condensed", sans-serif;
+	text-decoration: none;
 }
 
-.hero-img-box{
-    width: 100%;
-    flex:1;
+.cta-btn:hover {
+	background-color: blue;
+	color: var(--white);
 }
 
-.hero-description{
-    font-size: 1rem;
-    line-height: 1.5;
-    margin-bottom: 4.8rem;
-    font-family: "Karla", sans-serif;
+.hero-img-box {
+	width: 100%;
+	flex: 1;
 }
 
+.hero-description {
+	font-size: 1rem;
+	line-height: 1.5;
+	margin-bottom: 4.8rem;
+	font-family: "Karla", sans-serif;
+}
 
-.hero-img{
-    display: flex;
-    width: 120%;
+.hero-img {
+	display: flex;
+	width: 120%;
 }
 
 /*About Us*/
 
-.section-about{
-    padding: 4.8rem 0 9.6rem 0;
+.section-about {
+	padding: 4.8rem 0 9.6rem 0;
 }
 
-.about-us{
-    max-width: 130rem;
-    margin: 0 auto;
-    padding: 0 4rem;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 6rem;
-    align-items: center;
+.about-us {
+	max-width: 130rem;
+	margin: 0 auto;
+	padding: 0 4rem;
+	display: grid;
+	grid-template-columns: 1fr 2fr;
+	gap: 6rem;
+	align-items: center;
 }
 
-.about-description{
-    color: var(--grey);
-    font-size:1.2rem;
-    font-family: "Karla",san-serif;
+.about-description {
+	color: var(--grey);
+	font-size: 1.2rem;
+	font-family: "Karla", san-serif;
 }
 
-.about-text-box{
-    display:flex;
-    flex-direction: column;
-    justify-content: flex-start;
-
+.about-text-box {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
 }
 
-.about-content{
-   display: flex;
-   flex-direction: column;
-   gap: 40px;
-
-    
+.about-content {
+	display: flex;
+	flex-direction: column;
+	gap: 40px;
 }
 
-.about-us-pictures{
-    display: flex;
-    justify-content: space-between;
-    gap:5px;
+.about-us-pictures {
+	display: flex;
+	justify-content: space-between;
+	gap: 5px;
 }
 
-.about-us-images{
-    width:32%;
-
+.about-us-images {
+	width: 32%;
 }
-
 
 //Company Values Section
 
-.section-company-values{
-   padding: 48rem 0 9.6rem 0;
-
+.section-company-values {
+	padding: 48rem 0 9.6rem 0;
 }
-.values{
-    max-width: 130rem;
-    margin: 0 auto;
-    padding: 6rem 4rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 8rem;
-    align-items: center;
-    background-color: var(--light-grey);
-}
-
-.values-text-box{
-    display:flex;
-    flex-direction: column;
-    justify-content: flex-start;
+.values {
+	max-width: 130rem;
+	margin: 0 auto;
+	padding: 4rem 4rem;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 8rem;
+	align-items: center;
+	background-color: var(--light-grey);
 }
 
-.values-description{
-    color: var(--grey);
-    font-size:1.2rem;
-    font-family: "Karla",san-serif;
+.values-text-box {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
 }
 
-.values-list{
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
+.values-description {
+	color: var(--grey);
+	font-size: 1.2rem;
+	font-family: "Karla", san-serif;
 }
 
-.values-list-item{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.values-list {
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
 }
 
-.values-list-item img{
-    width:15%;
+.values-list-item {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-.values-list-content p{
-    color: var(--grey);
-    font-size:1.2rem;
-    font-family: "Karla",san-serif;
+.values-list-item img {
+	width: 15%;
 }
 
-.values-list-content h2{
-    font-weight: 400;
+.values-list-content p {
+	color: var(--grey);
+	font-size: 1.2rem;
 }
 
-
-
-.our-services{
-    max-width: 120rem;
-    margin: 0 auto;
-    padding: 6rem 4rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 8rem;
+.values-list-content h2 {
+	font-weight: 400;
 }
 
-.our-services p{
-    text-align: center;
+.our-services {
+	max-width: 120rem;
+	margin: 0 auto;
+	padding: 6rem 4rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 8rem;
 }
 
-.services{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.our-services p {
+	text-align: center;
+}
+
+.services {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
 .service-boxes {
-    background-color: var(--light-grey);
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-  
+	background-color: var(--light-grey);
+	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
 }
 
-
-.service-boxes img{
-    width:75px;
+.service-boxes img {
+	width: 75px;
 }
-
-
 
 .services-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-content: space-between;
-    gap: 20px;
-    margin-bottom: 40px;
-    padding: 0 10rem;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	justify-content: space-between;
+	gap: 20px;
+	margin-bottom: 40px;
+	padding: 0 10rem;
+}
+
+.services-description {
+	color: var(--grey);
+	font-size: 1.2rem;
+	font-family: "Karla", san-serif;
+	font-weight: 200;
+}
+
+.services-btn {
+	padding: 1rem 2rem;
+	background-color: var(--primary-blue);
+	color: var(--white);
+	text-decoration: none;
+	font-family: "Roboto Condensed", sans-serif;
+	border-raduis: 5px;
+}
+
+.services-btn:hover {
+	background-color: blue;
+}
+
+.testimonials-section {
+	max-width: 120rem;
+	margin: 0 auto;
+	display: flex;
+	padding: 0rem 13rem;
+}
+
+.testimonials {
+	display: flex;
+	padding: 2rem 2rem;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: var(--light-grey);
+}
+
+.testimonials-content {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	gap: 40px;
+	margin-bottom: 40px;
+	background-color: var(--light-grey);
+}
+
+.content .image-box {
+	width: 100%;
+	/* border-raduis: 100px; */
+}
+.content .image-box img {
+	width: 15%;
+	border-radius: 50%;
+}
+
+.image-box {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+	gap: 20px;
+}
+
+.content {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
+
+.image-box h4 {
+	color: var(--text-color);
+}
+
+.image-box p {
+	font-family: "Karla", sans-serif;
+	font-size: 1rem;
+}
+
+.testimonial-text {
+	font-family: "Karla", sans-serif;
+	font-size: 1.2rem;
+	color: var(--grey);
+}
+
+.testimonials-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	background-color: var(--light-grey);
+	padding: 2rem;
+}
+
+.cta-section {
+	max-width: 120rem;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: row;
+    padding: 6rem 0rem;
+}
+
+.cta-content {
+	background-image: url("/img/cta-image.jpeg");
+	background-size: cover;
+	background-position: start;
+	color: #fff;
+	padding: 6rem 0rem;
+	text-align: center;
+    height:50vh;
+    width:100%;
+    max-width:120rem;
+    
 }
 
 
-.services-description{
-    color: var(--grey);
-    font-size:1.2rem;
-    font-family: "Karla",san-serif;
-    font-weight:200;
-}
 
-.services-btn{
-        padding: 1rem 2rem;
-        background-color: var(--primary-blue);
-        color: var(--white);
-        text-decoration: none;
-        font-family: "Roboto Condensed", sans-serif;
-        border-raduis: 5px;
-
-}
-
-.services-btn:hover{
-    background-color: blue;
-}
-
-
-.testimonials-section{
-    max-width: 120rem;
-    margin: 0 auto;
+.cta-text-content{
     display: flex;
-   
-}
-
-.testimonials{
-    width: 120rem;
-    display: flex;
-    margin: 0 auto;
-    padding: 2rem 2rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-   
-}
-
-.testimonials-content{
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap:40px;
-    margin-bottom: 40px;
-    background-color: var(--light-grey);
-}
-
-.content .image-box{
-    width: 100%;
-    /* border-raduis: 100px; */
-}
-.content .image-box img{
-    width: 15%;
-    border-radius: 50%;
-    
-}
-
-.image-box{
-    display:flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
     gap: 20px;
+    width:100%;
+    margin: 0 auto;
+    max-width:50rem;
 }
 
-.content{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    
+.cta-text-content h1{
+    font-size: 60px;
+    font-weight: 300;
+
 }
 
-.image-box h4{
-    color: var(--text-color);
-}
-
-.image-box p{
-    font-family: "Karla", sans-serif;
+.cta-text-content p{
+    font-family: "Karla",sans-serif;
     font-size: 1rem;
 }
 
-.testimonial-text{
-    font-family: "Karla", sans-serif;
-    font-size: 1.2rem;
-    color: var(--grey);
+
+
+.contact-hero {
+  background-color: var(--primary-blue);
 }
 
-.testimonials-container{
+.contact-container {
+  position: relative;
+  max-width: 130rem;
+  margin: 0 auto;
+  padding: 0 6rem;
+  background-image: url("/img/cta-image.jpeg");
+  background-size: cover;
+  background-position: start;
+  color: #fff;
+  height: 50vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.contact-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); /* Adjust the alpha (last value) to control the darkness */
+}
+
+.contact-hero-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-hero-content h1 {
+  font-size: 60px;
+  font-weight: 400;
+  z-index: 1;
+}
+
+.contact-box-text{
+   display: flex;
+   flex-direction: column;
+   gap: 2rem;
+   justify-content: center;
+}
+
+.contact-list{
+     display: flex;
+   flex-direction: column;
+   gap: 2rem;
+}
+
+.contact-list-item{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.contact-list-item i{
+    font-size: 2rem;
+    color: white;
+    background-color: var(--primary-blue);
+    padding: 1.5rem;
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+    border-radius: 50%;
+}
+
+.contact-icon{
+    border-radius: 50%;
+}
+.fa-location-dot{
+    width:80px !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#message {
+      resize: none;
+}
+
+.contact-form-section{
+    width: 100rem;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+     padding: 6rem 6rem;
+     justify-content: center;
+     
+}
+
+.contact-form-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap:10rem;
+}
+
+.form-box{
     background-color: var(--light-grey);
-    padding: 2rem 4rem;
+    padding: 4rem;
 }
 
+.form-controls{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
 
+}
 
+.form-controls label{
+    font-family: "Roboto Condensed", sans-serif;
+}
 
+.form-controls input[type="text"],input[type="email"],input[type="tel"],select,textarea{
+    padding: 0.75rem;
+    outline: none;
+    border: 1px solid #D9D9D9;
+    font-family: "Karla", sans-serif;
+}
 
+.contact-btn{
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
 
 @media (max-width: 389px) {
-    .hero{
-        display:flex;
-    }
-  }
- 
+	.hero {
+		display: flex;
+	}
+
+	.services-container {
+		display: grid;
+		grid-template-columns: 1fr;
+		justify-content: space-between;
+		gap: 20px;
+		padding: 0 10rem;
+	}
+}
