--- a/css/styles.css
+++ b/css/styles.css
@@ -630,80 +630,175 @@ textarea {
 }
 
 @media (max-width: 390px) {
+	.heading-primary {
+		font-size: 2rem;
+		line-height: 0.9;
+		margin-bottom: 2rem;
+		font-weight: 400;
+		text-align: center;
+	}
+
+    .sub-title {
+    margin-bottom: 10px;
+    text-align: center;
+}
 	.hero {
 		display: flex;
 	}
+
+    .hero {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+    align-items: center;
+}
+
+.hero-text-box{
+    text-align: center;
+}
+
+.hero-img{
+    display: none;
+}
+
+.about-us-images{
+    display:none;
+}
 
 	.services-container {
 		display: grid;
 		grid-template-columns: 1fr;
 		justify-content: space-between;
 		gap: 20px;
-		padding: 0 10rem;
+		padding: 1rem;
+		margin-bottom: 0px;
 	}
 
-    .cta-content {
-    background-image: url(/img/cta-image.jpeg);
-    background-size: cover;
-    background-position: start;
-    color: #fff;
+
+.values {
+    max-width: 100%;
+    margin: 0 auto;
     padding: 1rem;
-    text-align: center;
-    height: 50vh;
-    width: 100%;
-    max-width: 120rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    background-color: var(--light-grey);
+    gap:20px;
 }
 
-.services-btn {
+.values-list-item img {
+	width: 10%;
+}
+
+.values-list {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
     padding: 0.75rem 1rem;
 }
-.cta-text-content h1 {
-    font-size: 2.2rem;
-    font-weight: 300;
+	.our-services {
+		max-width: 100%;
+		margin: 0 auto;
+		padding: 1rem;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		gap: 8rem;
+	}
+
+	.cta-content {
+		background-image: url(/img/cta-image.jpeg);
+		background-size: cover;
+		background-position: start;
+		color: #fff;
+		padding: 1rem;
+		text-align: center;
+		height: 45vh;
+		width: 100%;
+		max-width: 120rem;
+	}
+
+	.services-btn {
+		padding: 0.75rem 1rem;
+	}
+	.cta-text-content h1 {
+		font-size: 2.2rem;
+		font-weight: 300;
+	}
+
+.section-about {
+    padding: 1rem 0 3rem 0;
+}
+    .about-us {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    gap:10px;
 }
 
-
-.footer {
-	background-color: var(--black);
-	color: var(--white);
-	max-width: 100%;
-	margin: 0 auto;
-	display: flex;
-	flex-direction: column;
-	padding: 1rem 0rem;
-	justify-content: center;
+    .testimonials-section {
+    max-width: 100%;
+    margin: 0 auto;
+    display: flex;
+    padding: 1rem;
 }
+
+.testimonials-content {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.testimonials{
+    padding: 1rem;
+}
+
+	.footer {
+		background-color: var(--black);
+		color: var(--white);
+		max-width: 100%;
+		margin: 0 auto;
+		display: flex;
+		flex-direction: column;
+		padding: 1rem 0rem;
+		justify-content: center;
+	}
 
 	.footer-container {
 		display: flex;
 		flex-direction: column;
-		justify-content:center;
+		justify-content: center;
 		align-items: flex-start;
-        gap:20px;
-        padding:1rem;   
+		gap: 20px;
+		padding: 1rem;
 	}
 
-    .footer-links ul,
-li {
-	list-style-type: none;
-	display: flex;
-	flex-direction: column;
-	gap: 20px;
-}
+	.footer-links ul,
+	li {
+		list-style-type: none;
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+	}
 
-.logo-section {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	gap: 10px;
-}
+	.logo-section {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		gap: 10px;
+	}
 
-.copyright {
-	width: 100%;
-	background-color: var(--black);
-	color: white;
-	display: flex;
-	justify-content: center;
-	padding: 1rem;
-}
+	.copyright {
+		width: 100%;
+		background-color: var(--black);
+		color: white;
+		display: flex;
+		justify-content: center;
+		padding: 1rem;
+	}
 }
