--- a/css/styles.css
+++ b/css/styles.css
@@ -776,17 +776,18 @@ textarea {
 		gap: 8rem;
 	}
 
-	.cta-content {
-		background-image: url(/img/cta-image.jpeg);
-		background-size: cover;
-		background-position: start;
-		color: #fff;
-		padding: 1rem;
-		text-align: center;
-		height: 45vh;
-		width: 100%;
-		max-width: 120rem;
-	}
+
+
+	.contact-hero-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    gap: 20px;
+}
 
 	.services-btn {
 		padding: 0.75rem 1rem;
