made contact section mobile responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ a {
 	font-family: "Karla", sans-serif;
 }
 
-.pd-6{
+.pd-6 {
 	padding: 6rem 0rem 0rem;
 }
 
@@ -92,22 +92,22 @@ a {
 	background-color: blue;
 }
 
-.btn-mobile-nav{
-    border: none;
-    background: none;
-    cursor: pointer;
-    display: none;
-	z-index:1;
+.btn-mobile-nav {
+	border: none;
+	background: none;
+	cursor: pointer;
+	display: none;
+	z-index: 1;
 }
 
-.icon-mobile-nav{
-    height: 3rem;
-    width: 3rem;
-    color: #6f6f6f;
+.icon-mobile-nav {
+	height: 3rem;
+	width: 3rem;
+	color: #6f6f6f;
 }
 
-.icon-mobile-nav[name = "close-outline"]{
-    display: none;
+.icon-mobile-nav[name="close-outline"] {
+	display: none;
 }
 
 /* Hero Section */
@@ -500,17 +500,13 @@ li {
 
 /* Contact Section*/
 
-
-
-.contact-hero-content p{
+.contact-hero-content p {
 	color: var(--white);
-	z-index:1;
+	z-index: 1;
 }
 
-
-
-.contact-hero-content a{
-	z-index:1;
+.contact-hero-content a {
+	z-index: 1;
 }
 
 .contact-container {
@@ -536,13 +532,8 @@ li {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(
-		0,
-		0,
-		0,
-		0.8
-	);
-	z-index:0;
+	background-color: rgba(0, 0, 0, 0.8);
+	z-index: 0;
 }
 
 .contact-hero-content {
@@ -550,12 +541,11 @@ li {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width:60rem;
+	width: 60rem;
 	margin: 0 auto;
 	text-align: center;
-	gap:20px;
+	gap: 20px;
 }
-
 
 .contact-hero-content h1 {
 	z-index: 1;
@@ -665,14 +655,13 @@ textarea {
 }
 
 @media (max-width: 390px) {
+	.header {
+		padding: 0 3.2rem;
+	}
 
-      .header{
-        padding: 0 3.2rem;
-    }
-
-    .main-nav-list{
-        gap: 3.2rem;
-    }
+	.main-nav-list {
+		gap: 3.2rem;
+	}
 
 	.heading-primary {
 		font-size: 2rem;
@@ -683,57 +672,57 @@ textarea {
 	}
 
 	.contact-container {
-    position: relative;
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 1rem;
-    background-image: url(/img/cta-image.jpeg);
-    background-size: cover;
-    background-position: start;
-    color: #fff;
-    height: 50vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
+		position: relative;
+		max-width: 100%;
+		margin: 0 auto;
+		padding: 1rem;
+		background-image: url(/img/cta-image.jpeg);
+		background-size: cover;
+		background-position: start;
+		color: #fff;
+		height: 50vh;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
 
-.contact-hero-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+	.contact-hero-content {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
 
-    .sub-title {
-    margin-bottom: 10px;
-    text-align: center;
-}
+	.sub-title {
+		margin-bottom: 10px;
+		text-align: center;
+	}
 	.hero {
 		display: flex;
 	}
 
-    .hero {
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 1rem;
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 2rem;
-    align-items: center;
-}
+	.hero {
+		max-width: 100%;
+		margin: 0 auto;
+		padding: 1rem;
+		display: grid;
+		grid-template-columns: 1fr;
+		gap: 2rem;
+		align-items: center;
+	}
 
-.hero-text-box{
-    text-align: center;
-}
+	.hero-text-box {
+		text-align: center;
+	}
 
-.hero-img{
-    display: none;
-}
+	.hero-img {
+		display: none;
+	}
 
-.about-us-images{
-    display:none;
-}
+	.about-us-images {
+		display: none;
+	}
 
 	.services-container {
 		display: grid;
@@ -744,28 +733,27 @@ textarea {
 		margin-bottom: 0px;
 	}
 
+	.values {
+		max-width: 100%;
+		margin: 0 auto;
+		padding: 1rem;
+		display: grid;
+		grid-template-columns: 1fr;
+		align-items: center;
+		background-color: var(--light-grey);
+		gap: 20px;
+	}
 
-.values {
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 1rem;
-    display: grid;
-    grid-template-columns: 1fr;
-    align-items: center;
-    background-color: var(--light-grey);
-    gap:20px;
-}
+	.values-list-item img {
+		width: 10%;
+	}
 
-.values-list-item img {
-	width: 10%;
-}
-
-.values-list {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    padding: 0.75rem 1rem;
-}
+	.values-list {
+		display: flex;
+		flex-direction: column;
+		gap: 30px;
+		padding: 0.75rem 1rem;
+	}
 	.our-services {
 		max-width: 100%;
 		margin: 0 auto;
@@ -776,18 +764,16 @@ textarea {
 		gap: 8rem;
 	}
 
-
-
 	.contact-hero-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
-    gap: 20px;
-}
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		margin: 0 auto;
+		text-align: center;
+		gap: 20px;
+	}
 
 	.services-btn {
 		padding: 0.75rem 1rem;
@@ -797,34 +783,34 @@ textarea {
 		font-weight: 300;
 	}
 
-.section-about {
-    padding: 1rem 0 3rem 0;
-}
-    .about-us {
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 1rem;
-    display: grid;
-    grid-template-columns: 1fr;
-    align-items: center;
-    gap:10px;
-}
+	.section-about {
+		padding: 1rem 0 3rem 0;
+	}
+	.about-us {
+		max-width: 100%;
+		margin: 0 auto;
+		padding: 1rem;
+		display: grid;
+		grid-template-columns: 1fr;
+		align-items: center;
+		gap: 10px;
+	}
 
-    .testimonials-section {
-    max-width: 100%;
-    margin: 0 auto;
-    display: flex;
-    padding: 1rem;
-}
+	.testimonials-section {
+		max-width: 100%;
+		margin: 0 auto;
+		display: flex;
+		padding: 1rem;
+	}
 
-.testimonials-content {
-    display: grid;
-    grid-template-columns: 1fr;
-}
+	.testimonials-content {
+		display: grid;
+		grid-template-columns: 1fr;
+	}
 
-.testimonials{
-    padding: 1rem;
-}
+	.testimonials {
+		padding: 1rem;
+	}
 
 	.footer {
 		background-color: var(--black);
@@ -870,54 +856,90 @@ textarea {
 		padding: 1rem;
 	}
 
-    .btn-mobile-nav
-    {
-        display: block;
-    }
+	.btn-mobile-nav {
+		display: block;
+	}
 
-    .main-nav{
-        background-color:var(--white);
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-        transform: translateX(100%);
+	.main-nav {
+		background-color: var(--white);
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100vh;
+		transform: translateX(100%);
 
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        opacity: 0;
-        transition: all 1s ease-in-out;
-        /* Make it unacccessable to mouse and keyboard */
-        pointer-events: none;
-        /* Hide it from screen readers*/
-        visibility: none;
-		z-index:1;
-    }
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		opacity: 0;
+		transition: all 1s ease-in-out;
+		pointer-events: none;
+		visibility: none;
+		z-index: 1;
+	}
 
-    .nav-open .main-nav
-    {
-        opacity: 1;
-        pointer-events: auto;
-        visibility: visible;
-        transform: translateX(0);
-    }
+	.nav-open .main-nav {
+		opacity: 1;
+		pointer-events: auto;
+		visibility: visible;
+		transform: translateX(0);
+	}
 
-    .main-nav-list{
-        flex-direction: column;
+	.main-nav-list {
+		flex-direction: column;
+	}
 
-    }
+	.main-nav-link:link,
+	.main-nav-link:visited {
+		font-size: 1rem;
+	}
 
-    .main-nav-link:link,
-    .main-nav-link:visited{
-        font-size: 1rem;
-    }
+	.nav-open .icon-mobile-nav[name="close-outline"] {
+		display: block;
+	}
+	.nav-open .icon-mobile-nav[name="menu-outline"] {
+		display: none;
+	}
 
-    .nav-open .icon-mobile-nav[name = "close-outline"]{
-        display: block;
-    }
-    .nav-open .icon-mobile-nav[name = "menu-outline"]{
-        display: none;
-    }
+	/* Contact Section*/
+
+	.contact-form-section {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		margin: 0 auto;
+		padding: 1rem;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.contact-form-container {
+		display: grid;
+		grid-template-columns: 1fr;
+		gap: 2rem;
+	}
+
+	.form-box {
+		background-color: var(--light-grey);
+		padding: 1rem;
+	}
+
+	.contact-list-item i {
+    font-size: 0.75rem;
+    color: white;
+    background-color: var(--primary-blue);
+    padding: 1.5rem;
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+    border-radius: 50%;
+}
+
+.fa-location-dot {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	width: 60px !important;
+}
 }
