--- a/css/styles.css
+++ b/css/styles.css
@@ -595,7 +595,7 @@ li {
 }
 
 .contact-form-section {
-	width: 100rem;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	margin: 0 auto;
@@ -606,7 +606,7 @@ li {
 .contact-form-container {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	gap: 10rem;
+	gap: 5rem;
 }
 
 .form-box {
@@ -660,7 +660,7 @@ textarea {
 	max-width: 120rem;
 	margin: 0 auto;
 	display: flex;
-	padding: 0rem 13rem;
+	padding: 0rem 2rem;
 }
 
 .teams {
@@ -696,6 +696,10 @@ textarea {
 	gap: 1.25rem;
 }
 
+.team-image-box img{
+	width: 75%;
+}
+
 .content {
 	display: flex;
 	flex-direction: column;
@@ -725,6 +729,13 @@ textarea {
 	background-color: var(--light-grey);
 	padding: 2rem;
 }
+
+/* .fa-location-dot {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	width: 60px !important;
+} */
 
 @media (max-width: 390px) {
 	.header {
@@ -1008,10 +1019,5 @@ textarea {
     border-radius: 50%;
 }
 
-.fa-location-dot {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-	width: 60px !important;
-}
+
 }
