--- a/css/styles.css
+++ b/css/styles.css
@@ -653,7 +653,7 @@ textarea {
 	gap: 20px;
 }
 .copyright {
-	width: 120rem;
+	width: 100%;
 	background-color: var(--black);
 	color: white;
 	display: flex;
@@ -705,7 +705,6 @@ textarea {
 }
 .content .image-box {
 	width: 100%;
-	/* border-raduis: 100px; */
 }
 .content .image-box img {
 	width: 15%;
@@ -816,12 +815,129 @@ textarea {
 	margin-bottom: 1rem;
 }
 
-/* .fa-location-dot {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-	width: 60px !important;
-} */
+/*News Page/Section*/
+
+.news {
+	max-width: 120rem;
+	margin: 0 auto;
+	padding: 6rem 4rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 8rem;
+}
+
+.news-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+.news-articles {
+	background-color: var(--light-grey);
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+}
+
+.news-article-img{
+	display: flex;
+}
+.news-article-img img {
+	width: 100%;
+	height: 100%;
+}
+
+.news-articles-container {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	justify-content: space-between;
+	gap: 1.25rem;
+	margin-bottom: 40px;
+	padding: 0 10rem;
+}
+
+.news-article-text{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 2rem;
+	gap: 2rem;
+}
+.news-article-text p {
+	color: var(--grey);
+	font-size: 1.2rem;
+	font-family: "Karla", san-serif;
+	font-weight: 200;
+}
+
+
+
+.news-btn {
+    color: var(--primary-blue);
+    text-decoration: none;
+    font-family: "Roboto Condensed", sans-serif;
+    border-raduis: 0.313rem;
+	cursor: pointer;
+}
+
+/*Subcribe Section*/
+
+.subscribe{
+	max-width: 120rem;
+	margin: 0 auto;
+	padding: 6rem 4rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 8rem;
+	background-color: var(--primary-blue);
+}
+
+.subscribe-container{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 40px;
+	
+}
+
+.subscribe-text{
+	color: var(--white);
+}
+
+.subscribe-form{
+	width: 100%;
+	display: grid;
+	flex-direction: row;
+	background-color: var(--light-grey);
+	justify-content: center;
+	padding: 1rem;
+}
+
+.subscribe-form-controls{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	gap: 20px;
+	align-items: center;
+}
+
+.subscribe-form input[type="email"]{
+	    padding: 1rem;
+		width: 100%;
+}
+
+.subscribe-btn{
+	padding: 1rem 3rem;
+	outline: none;
+	border: none;
+	background-color: var(--primary-blue);
+	color: var(--light-grey);
+}
+
+
 
 @media (max-width: 390px) {
 	.header {
@@ -1153,4 +1269,38 @@ textarea {
 		flex-direction: column;
 		gap: 1rem;
 	}
+
+	.subscribe {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--primary-blue);
+}
+
+.subscribe-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 40px;
+}
+
+.news {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0px;
+}
+.news-articles-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: space-between;
+    gap: 1.25rem;
+    margin-bottom: 20px;
+    padding: 1rem;
+}
 }
